--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
     />
-    <link rel="icon" href="/assets/images/logo.ico" type="image/x-icon" />
+    <link rel="icon" href="./assets/images/logo.ico" type="image/x-icon" />
     <title>P2E-UTM</title>
   </head>
   <body>
@@ -77,7 +77,7 @@
       <div class="team-carousel owl-carousel">
         <div class="team-card">
           <img
-            src="/assets/images/jassem_manita.png"
+            src="./assets/images/jassem_manita.png"
             alt="Team Member 1"
             class="team-member-image"
           />
@@ -87,7 +87,7 @@
 
         <div class="team-card">
           <img
-            src="/assets/images/chaouki_alaya.png"
+            src="./assets/images/chaouki_alaya.png"
             alt="Team Member 1"
             class="team-member-image"
           />
@@ -97,7 +97,7 @@
 
         <div class="team-card">
           <img
-            src="/assets/images/youssef_azouz.png"
+            src="./assets/images/youssef_azouz.png"
             alt="Team Member 1"
             class="team-member-image"
           />
@@ -106,7 +106,7 @@
         </div>
         <div class="team-card">
           <img
-            src="/assets/images/raoua_kefi.png"
+            src="./assets/images/raoua_kefi.png"
             alt="Team Member 1"
             class="team-member-image"
           />
@@ -115,7 +115,7 @@
         </div>
         <div class="team-card">
           <img
-            src="/assets/images/meriem_saidi.png"
+            src="./assets/images/meriem_saidi.png"
             alt="Team Member 1"
             class="team-member-image"
           />
@@ -124,7 +124,7 @@
         </div>
         <div class="team-card">
           <img
-            src="/assets/images/montassar_ghazouani.png"
+            src="./assets/images/montassar_ghazouani.png"
             alt="Team Member 1"
             class="team-member-image"
           />
@@ -133,7 +133,7 @@
         </div>
         <div class="team-card">
           <img
-            src="/assets/images/wissem_neffati.png"
+            src="./assets/images/wissem_neffati.png"
             alt="Team Member 1"
             class="team-member-image"
           />
@@ -193,7 +193,10 @@
           loop: true,
           margin: 20,
           nav: true,
-          navText: ["", "Next <i class='fa fa-chevron-right'></i>"],
+          navText: [
+            "",
+            "&nbsp;&nbsp;&nbsp;Next &nbsp;&nbsp;<i class='fa fa-chevron-right'></i>",
+          ],
           responsive: {
             0: {
               items: 1,
