--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
     />
-    <link rel="icon" href="./assets/images/logo.ico" type="image/x-icon" />
+    <link rel="icon" href="./assets/images/ico.ico" type="image/x-icon" />
     <title>P2E-UTM</title>
   </head>
   <body>
